Motor Unit/Motor_Board_Hand_Firmware.cydsn/BUILD.log
--------------- Build Started: 06/01/2022 21:34:12 Project: Motor_Board_Hand_Firmware, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I..\..\HindsightCAN -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -D CHIP_TYPE=CHIP_TYPE_PSOC_CY8C4248AZI_L485 -Wall -ffunction-sections -ffat-lto-objects -Og -c ..\MotorFirmware\main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
..\MotorFirmware\main.c: In function 'Period_Reset_Handler':
..\MotorFirmware\main.c:50:9: warning: unused variable 'timer' [-Wunused-variable]
     int timer = Timer_PWM_ReadStatusRegister();
         ^
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I..\..\HindsightCAN -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/Motor_Unit_CAN.lst -g -D DEBUG -D CY_CORE_ID=0 -D CHIP_TYPE=CHIP_TYPE_PSOC_CY8C4248AZI_L485 -Wall -ffunction-sections -ffat-lto-objects -Og -c ..\MotorFirmware\Motor_Unit_CAN.c -o .\CortexM0\ARM_GCC_541\Debug\Motor_Unit_CAN.o
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I..\..\HindsightCAN -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/MotorDrive.lst -g -D DEBUG -D CY_CORE_ID=0 -D CHIP_TYPE=CHIP_TYPE_PSOC_CY8C4248AZI_L485 -Wall -ffunction-sections -ffat-lto-objects -Og -c ..\MotorFirmware\MotorDrive.c -o .\CortexM0\ARM_GCC_541\Debug\MotorDrive.o
..\MotorFirmware\MotorDrive.c: In function 'set_PWM':
..\MotorFirmware\MotorDrive.c:33:21: error: 'can_recieve' undeclared (first use in this function)
    if (GetPacketID(&can_recieve) == 0xE) {
                     ^
..\MotorFirmware\MotorDrive.c:33:21: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 06/01/2022 21:34:13 ---------------
